# bcdf

./: .gitignore  Cargo.toml  README.md
src/: bandcamp.rs  cli.rs  download.rs  feed.rs  http.rs  main.rs  metrics.rs  search.rs  spotify.rs  state.rs  tag.rs  types.rs  util.rs
test/: content.html
