[package]
name = "bcdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
audiotags = "0.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
id3 = { version = "1.16.0", features = ["tokio"] }
lazy_static = "1.5.0"
musicbrainz_rs = { version = "0.5.0", default-features = false, features = ["async"] }
nucleo-matcher = "0.3.1"
reqwest = { version = "0.12.9", features = ["stream"] }
rspotify = { version = "0.13.3", features = ["cli"] }
rss = { version = "2.0.11", features = ["url", "serde", "atom", "chrono", "with-serde"] }
scraper = "0.19.1"
serde = "1.0.215"
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = "0.3.19"
